2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: Fixed 'Bug 583006
	  - Enum members are prefixed with an enum name, in the
	  Document Outline pad' / applied patch from Alexander
	  Cherniuk <ts33kr@gmail.com>

2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/Identifier.cs:
	* MonoDevelop.CSharp.Dom/FullTypeName.cs:
	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/ICSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Dom/AbtractCSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Dom/Expressions/BinaryOperatorExpression.cs:
	  Worked on c# formatter & dom.

2010-02-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: Fix
	  skipping duplicate refs.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngine.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Implemented 'Bug 429265 - #region reindentation does not
	  work with autocompletion'

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: fixed
	  'Bug 582016 – Switching build configuration does not
	  re-highlight conditional comments'.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpIndentEngine.cs: fixed
	  'Bug 429265 - #region reindentation does not work with
	  autocompletion'.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: fixed
	  pre processor tag highlighting.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: fixed
	  'Bug 582021 - parsing of nested conditional comments is
	  broken'.


2010-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj: Fix build.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am: